Use the initial password entered when creating field officers.
Previously field officers always received the default password, which caused login failures after using the Add Field Officer form.

Co-authored-by: Cursor <cursoragent@cursor.com>